modified supg option in dynamical turbulence configuration file

--- a/tutorials/Turbulence/bwfs/DATA/RANS_dynamical_properties.in
+++ b/tutorials/Turbulence/bwfs/DATA/RANS_dynamical_properties.in
@@ -28,7 +28,7 @@
 # 1 (yes) or 0 (no)
 #
   Supg         1
-  ModifiedSupg no
+  ModifiedSupg supgc
   Scpg         0  
 # ...............................................................
 # NON CONSISTENT1 (yes) or 0 (no)
