fixed broken link in make_gencase

--- a/solvers/Makefile
+++ b/solvers/Makefile
@@ -218,7 +218,7 @@ gencase:
 	fi
 	@cd $(FEMUS_DIR)/applications/gencase; \
 	$(MAKE); \
-	ln -s $(FEMUS_DIR)/applications/gencase/gencase-opt $(FEMUS_DIR)/bin/gencase; \
+	ln -s $(FEMUS_DIR)/bin/gencase-opt $(FEMUS_DIR)/bin/gencase; \
 
 gencase_clean:
 	@if [ \( -e "$(FEMUS_DIR)/bin/gencase" \) ]; then \
